Project

General

Profile

Actions

Bug #26939

closed

Enabling journaling on an in-use image ignores any journal options

Added by Jason Dillaman over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The journal options (like journal pool) are not passed to the lock owner in the update features request. Therefore, if journaling is being enabled, the lock should be locally acquired instead of attempting to send the request to the peer.


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #35711: luminous: Enabling journaling on an in-use image ignores any journal optionsResolvedPrashant DActions
Copied to rbd - Backport #35712: mimic: Enabling journaling on an in-use image ignores any journal optionsResolvedPrashant DActions
Actions #1

Updated by Mykola Golub over 5 years ago

  • Status changed from New to In Progress
  • Assignee set to Mykola Golub
Actions #2

Updated by Mykola Golub over 5 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Mykola Golub over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #35711: luminous: Enabling journaling on an in-use image ignores any journal options added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #35712: mimic: Enabling journaling on an in-use image ignores any journal options added
Actions #6

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF