src/librbd/Operations.cc
@@ -1314,12 +1314,31 @@ int Operations<I>::update_features(uint64_t features, bool enabled) {
     }
   };
 
-  r = invoke_async_request("update_features", false,
-                           boost::bind(&Operations<I>::execute_update_features,
-                                       this, features, enabled, _1, 0),
-                           boost::bind(&ImageWatcher<I>::notify_update_features,
-                                       m_image_ctx.image_watcher, features,
-                                       enabled, _1));
+  // The journal options are not passed to the lock owner in the
+  // update features request. Therefore, if journaling is being
+  // enabled, the lock should be locally acquired instead of
+  // attempting to send the request to the peer.
+  if (enabled && (features & RBD_FEATURE_JOURNALING) != 0) {
+    C_SaferCond cond_ctx;
+    {
+      RWLock::RLocker owner_lock(m_image_ctx.owner_lock);
+      r = prepare_image_update(true);
+      if (r < 0) {
+        return -EROFS;
+      }
+
+      execute_update_features(features, enabled, &cond_ctx, 0);
+    }
+
+    r = cond_ctx.wait();
+  } else {
+    r = invoke_async_request("update_features", false,
+                             boost::bind(&Operations<I>::execute_update_features,
+                                         this, features, enabled, _1, 0),
+                             boost::bind(&ImageWatcher<I>::notify_update_features,
+                                         m_image_ctx.image_watcher, features,
+                                         enabled, _1));
+  }
   ldout(cct, 2) << "update_features finished" << dendl;
   return r;
 }
